# deno-model-synthesisaurus

./: build.ts  bundle.ts  deno.json  readme.md
.devcontainer/: devcontainer.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
www/: App.tsx  index.html  index.tsx
