[package]
name = "tauri-deno-starter"
version = "0.1.0"
description = "Deno + Tauri app"
authors = ["Denosaur"]
license = ""
repository = "https://github.com/marc2332/tauri-deno-starter"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.7", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
