[package]
name = "tauri-deno-starter"
version = "0.1.0"
description = "Deno + Tauri app"
authors = ["Denosaur"]
license = ""
repository = "https://github.com/marc2332/tauri-deno-starter"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-plugin-dialog = "2.2.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
